--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      </div><span class="angle-2">
         <a href="#" class="angle">&nbsp;O&nbsp;</a></span>
     </div>
-        <img class="banner" src="banner.png" alt="">
+        <img class="banner" src="banner.png" alt="image">
     </div>
     
     
