--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <footer class="footer">
 
         <div class="footer-1">
-            <img id="logo-3" src="/Uploads/logo.png" alt="" sizes="150px" srcset="">
+            <img id="logo-3" src="logo.png" alt="" sizes="150px" srcset="">
             <span>
             <h2 style="color: yellow;">About</h2>
             <p id="para">Tamil Nadu, a South Indian state, In Madurai, Meenakshi Amman Temple has high ‘gopuram’ towers ornamented with colourful figures. On Pamban Island, Ramanathaswamy Temple is a pilgrimage site. The town of Kanyakumari.</p>
